구매리스트에 담기기 성공

--- a/gachon_flea/templates/gachon_flea/Product_detail.html
+++ b/gachon_flea/templates/gachon_flea/Product_detail.html
@@ -50,8 +50,8 @@
                 <a href="{% url 'gachon_flea:add_cart' product.id %}">
                  <input type="button" value="찜하기" class="btn btn-primary">
                 </a>
-                <a href="{% url 'gachon_flea:add_cart' product.id %}">
-                    <input type="button" value="구매하기" class="btn btn-primary">
+            <a href="{% url 'gachon_flea:add_buy_list' product.id %}">
+                <input type="button" value="구매하기" class="btn btn-primary">
                 </a>
         </div>
   </div>
