--- a/gachon_flea/templates/gachon_flea/main.html
+++ b/gachon_flea/templates/gachon_flea/main.html
@@ -64,7 +64,7 @@
 <section class="section-name padding-y-sm">
     <div class="container">
         <div class="row">
-            {% for item in object_list.all|slice:":4" %}
+            {% for item in object_list.all|slice:":100" %}
                 {% if item.category.name == 'digital' %}
                 <div class="col-md-3">
                     <div href="#" class="card card-product-grid">
@@ -74,13 +74,14 @@
                             </a>
                         </div>
                         <figcaption class="info-wrap">
-                            <a href="{{ item.get_absolute_url }}" class="title">{{ item.name }}</a> <!--상품명-->
+                            <a href="{{ item.get_absolute_url }}" class="title" style="font-size:24px;color:blue;"><b>{{ item.name }}</b></a> <!--상품명-->
                             <div class="price mt-1">{{ item.price }}원</div> <!-- 가격 -->
                         </figcaption>
                     </div>
                 </div> <!-- col.// -->
                 {%endif%}
          {% endfor %}
+
         </div> <!-- row.// -->
     </div><!-- container // -->
 </section>
