--- a/gachon_flea/templates/gachon_flea/main.html
+++ b/gachon_flea/templates/gachon_flea/main.html
@@ -66,6 +66,7 @@
         <div class="row">
             {% for item in object_list.all|slice:":100" %}
                 {% if item.category.name == 'digital' %}
+                    {% if item.sell == False %}
                 <div class="col-md-3">
                     <div href="#" class="card card-product-grid">
                         <div class="thumbnail">
@@ -79,6 +80,7 @@
                         </figcaption>
                     </div>
                 </div> <!-- col.// -->
+            {% endif %}
                 {%endif%}
          {% endfor %}
 
