--- a/gachon_flea/templates/gachon_flea/main/beauty.html
+++ b/gachon_flea/templates/gachon_flea/main/beauty.html
@@ -67,6 +67,8 @@
         <div class="row">
             {% for item in object_list.all|slice:":100" %}
                 {% if item.category.name == 'beauty' %}
+                                {% if item.sell == False %}
+
                 <div class="col-md-3">
                     <div href="#" class="card card-product-grid">
                         <div class="thumbnail">
@@ -80,6 +82,8 @@
                         </figcaption>
                     </div>
                 </div> <!-- col.// -->
+                            {%endif%}
+
                 {%endif%}
          {% endfor %}
         </div> <!-- row.// -->
