--- a/gachon_flea/templates/gachon_flea/main/clothes.html
+++ b/gachon_flea/templates/gachon_flea/main/clothes.html
@@ -66,6 +66,8 @@
         <div class="row">
             {% for item in object_list.all|slice:":100" %}
                 {% if item.category.name == 'clothes' %}
+                                {% if item.sell == False %}
+
                 <div class="col-md-3">
                     <div href="#" class="card card-product-grid">
                         <div class="thumbnail">
@@ -79,6 +81,8 @@
                         </figcaption>
                     </div>
                 </div> <!-- col.// -->
+                {%endif%}
+
                 {%endif%}
          {% endfor %}
         </div> <!-- row.// -->
