--- a/gachon_flea/templates/gachon_flea/main/beauty.html
+++ b/gachon_flea/templates/gachon_flea/main/beauty.html
@@ -75,7 +75,7 @@
                             </a>
                         </div>
                         <figcaption class="info-wrap">
-                            <a href="{{ item.get_absolute_url }}" class="title">{{ item.name }}</a> <!--상품명-->
+                            <a href="{{ item.get_absolute_url }}" class="title" style="font-size:24px;color:blue;"><b>{{ item.name }}</b></a> <!--상품명-->
                             <div class="price mt-1">{{ item.price }}원</div> <!-- 가격 -->
                         </figcaption>
                     </div>
