--- a/gachon_flea/templates/gachon_flea/Product_detail.html
+++ b/gachon_flea/templates/gachon_flea/Product_detail.html
@@ -29,7 +29,7 @@
                  <div class="card-body">
                      <div class="col-md-6 text-right">
                          <img src="{% if product.img %} {{ product.img.url }} {% else %} {{ product.img.url }} {% endif %}"
-                              alt="..." style="height: 500px; width: auto">
+                              alt="..." style="height: 500px; width: 450px">
                      </div>
                  </div>
              </div>
