--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -9,10 +9,10 @@
         .form-side{/*폼을 왼쪽정렬시킴*/
             float:left;
         }
-    .side {/* button side정렬*/
+        .side {/* button side정렬*/
         width:50;
+        
         margin : 0 auto;
-    float:left;
     display: inline;
     vertical-align: middle;
     height: 30%;
@@ -20,10 +20,13 @@
     }
 
 #side-bar{ /* 버튼 속성*/
-
-    margin : 20;
-    width:100px;
-    height: 50;
+    background: #32AAFF;
+    padding: 10px 5;
+    color:white;
+    font-weight: bold;
+    border:0;
+    width:120px;
+    height: 50px;
 }
     </style>
 
