--- a/gachon_flea/templates/gachon_flea/mypage/mypage_sell_ing.html
+++ b/gachon_flea/templates/gachon_flea/mypage/mypage_sell_ing.html
@@ -55,10 +55,10 @@
               <div id="side"><input type="button" id="side-bar" value="지갑 보기"></div>
           </a>
           <a href="{% url 'gachon_flea:buy_ing' %}">
-              <div id="side"><input type="button" id="side-bar" value="진행중인 구매"></div>
+              <div id="side"><input type="button" id="side-bar" value="구매 목록"></div>
           </a>
           <a href="{% url 'gachon_flea:sell_ing' %}">
-              <div id="side"><input type="button" id="side-bar" value="진행중인 판매"></div>
+              <div id="side"><input type="button" id="side-bar" value="판매 목록"></div>
           </a>
           <a href="{% url 'cart:cart_detail' %}">
                <div id="side"><input type="button" id="side-bar" value="찜 목록"></div>
@@ -72,7 +72,7 @@
     <table border="0">
       <thead>
         <tr>
-            <th scope="row", rowspan="2">가천월렛(지갑아이콘 넣고)<br/><!-- 지갑보기 -->
+            <th scope="row", rowspan="2">가천월렛<br/><!-- 지갑보기 -->
                 잔액 : {{ balance }} 원 입니다.</th>
         </tr>
       </thead>
