--- a/gachon_flea/templates/gachon_flea/mypage/mypage_sell.html
+++ b/gachon_flea/templates/gachon_flea/mypage/mypage_sell.html
@@ -55,8 +55,8 @@
               <a href="{% url 'gachon_flea:etc' %}" class="btn btn-outline-dark" id="side-bar">기타</a>&emsp;
 
               <div id="side"><input type="button" id="side-bar" value="지갑 보기" onclick="{% url 'gachon_flea:etc' %}"></div>
-              <div id="side"><input type="button" id="side-bar" value="진행중인 구매" onclick="{% url 'gachon_flea:buy_ing' %}"></div>
-              <div id="side"><input type="button" id="side-bar" value="진행중인 판매" onclick="{% url 'gachon_flea:sell_ing' %}"></div>
+              <div id="side"><input type="button" id="side-bar" value="구매 목록" onclick="{% url 'gachon_flea:buy_ing' %}"></div>
+              <div id="side"><input type="button" id="side-bar" value="판매 목록" onclick="{% url 'gachon_flea:sell_ing' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="찜 목록" onclick="{% url 'cart:cart_detail' %}"></div>
               <div id="side"><input type="button" id="side-bar" value="후기 확인" onclick="{% url 'gachon_flea:check_review' %}"></div>
       </form>
